# data_master_ia

./: .gitignore  atualizacao.md  atualizacao_2.md  deep-research-report.md  evolution.md  fase_3.md
agentic-analytics/apps/backend/: Dockerfile  pyproject.toml  test_duckdb.py  test_text2sql.py
agentic-analytics/apps/backend/app/: config.py  main.py
agentic-analytics/apps/backend/app/agent/: answer_generator.py  evaluators.py  graph.py  guardrail.py  orchestrator.py  query_rewriter.py  rag_agent.py  text2sql_agent.py
agentic-analytics/apps/backend/app/db/: session.py
agentic-analytics/apps/backend/app/models/: workspace.py
agentic-analytics/apps/backend/app/security/: cost_limiter.py  masking.py  sql_validator.py
agentic-analytics/apps/backend/app/services/: llm_provider.py  redis_client.py  security.py
agentic-analytics/apps/backend/app/tracing/: audit.py
agentic-analytics/apps/backend/data/: pricing.duckdb
agentic-analytics/apps/backend/scripts/: evaluate_langsmith.py
agentic-analytics/apps/backend/tests/: conftest.py
agentic-analytics/apps/backend/tests/e2e/: test_frontend_chat.py  test_security_masking.py
agentic-analytics/apps/backend/tests/evals/: test_answer_relevance.py  test_sql_accuracy.py
agentic-analytics/apps/backend/tests/integration/: test_api_envelope.py  test_ask_analytics.py  test_audit.py  test_sse_streaming.py  test_swarm_routing.py  test_workspace_api.py
agentic-analytics/apps/backend/tests/security/: test_cors.py  test_sandbox_network.py  test_sql_injection.py  test_sql_validator.py
agentic-analytics/apps/backend/tests/unit/: test_data_agent.py  test_guardrail.py  test_health.py  test_llm_provider.py  test_masking.py  test_openapi_contracts.py  test_orchestrator.py  test_rag_hybrid_search.py  test_risk_agent.py  test_sandbox_executor.py  test_sql_validator.py  test_text2sql_llm.py  (+4 more)
(+71 files in other folders)
