[project]
name = "agentic-analytics-backend"
version = "0.1.0"
description = "Agentic Analytics para Pricing, Margem, Safra, Risco e ROAE"
requires-python = ">=3.12"

dependencies = [
    # FastAPI
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",

    # LangGraph + LangChain
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.0",

    # Text2SQL
    "text2sql>=0.1.0",
    "text2sql[anthropic]>=0.1.0",

    # OpenSearch
    "opensearch-py>=2.6.0",


    # Database
    "psycopg[binary]>=3.1.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    "duckdb>=1.0.0",

    # Data / Seeds
    "faker>=26.0.0",
    "pandas>=2.2.0",

    # Security / Utils
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",

    # Observability & Reliability
    "structlog>=24.0.0",
    "rich>=13.7.0",
    "tenacity>=8.3.0",

    # SQL Parsing
    "sqlglot>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "pytest-cov>=5.0.0",
    "requests>=2.31.0",
    "playwright>=1.44.0",
    "pytest-playwright>=0.5.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "requests-mock>=1.12.1",
    "vcrpy>=6.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 60
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"
